# torchstore

./: .flake8  .gitignore  .pre-commit-config.yaml  BUFFER_CACHE.md  CONTRIBUTING.md  README.md  TODO.md  get_benchmark.csv  playground.py  put_benchmark.csv  pyproject.toml  setup.py
.github/workflows/: unit_test.yaml
example/: buffer_cache_example.py  dtensor.py  send_tensor_gloo.py  send_tensor_gloo_multinode_slurm.py  send_tensor_monarch_rpc.py  send_tensor_monarch_rpc_multinode.py  torchstore_benchmark.py  torchstore_rl.py  torchstore_spmd.py  torchstore_state_dict.py
tests/: bench_weight_sync.py  benchmark_attach_pattern.py  monarch_patch.py  test_buffer_cache.py  test_cuda_ipc.py  test_direct_weight_sync.py  test_gpu_direct_rdma.py  test_keys.py  test_large_tensors.py  test_models.py  test_monarch_rdma.py  test_put_batch.py  test_rdma_memory_cache.py  test_resharding.py  test_resharding_basic.py  test_resharding_ext.py  test_shared_memory.py  test_slice.py  test_slice_api.py  test_spmd.py  test_state_dict.py  test_store.py  test_strategy.py  test_tensor_slice.py  test_torchcomms_transport.py  test_utils.py  test_xccl_xpu.py  utils.py
torchstore/: __init__.py  _async_utils.py  _state_dict_utils.py  api.py  client.py  constants.py  controller.py  direct_weight_sync.py  dtensor_utils.py  logging.py  playground.py  spmd.py  state_dict_utils.py  storage_volume.py  store.py  strategy.py  transport.py  utils.py
torchstore/data_structures/: trie.py
torchstore/storage_utils/: trie.py
torchstore/torchstore/: store.py
torchstore/transport/: __init__.py  buffers.py  cuda_ipc.py  gloo.py  monarch_rdma.py  monarch_rpc.py  pipe.py  shared_memory.py  torch_distributed_buffer.py  types.py  xccl.py
torchstore/transport/gloo/: __init__.py  buffer.py  utils.py
torchstore/transport/nixl/: buffer.py
torchstore/transport/torchcomms/: buffer.py  cache.py  uniflow_buffer.py
