[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchstore"
version = "0.1.0"
description = "A storage solution for PyTorch tensors with distributed tensor support"
readme = "README.md"
authors = [
    { name = "PyTorch Team", email = "packages@pytorch.org" },
]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [] #todo: add toml

[project.urls]
"Homepage" = "https://github.com/your-username/torchstore"
"Bug Tracker" = "https://github.com/your-username/torchstore/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "expecttest",
    "anyio",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["torchstore*"]
exclude = ["assets*", "tests*", "docs*"]
