[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchstore"
version = "0.0.0dev"
description = "A storage solution for PyTorch tensors with distributed tensor support"
readme = "README.md"
authors = [
    { name = "PyTorch Team", email = "packages@pytorch.org" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pygtrie",
    "portpicker",
    "torch",
    "torchmonarch==0.4.1",
] #todo: add toml

[project.urls]
"Homepage" = "https://github.com/meta-pytorch/torchstore"
"Bug Tracker" = "https://github.com/meta-pytorch/torchstore/issues"

[project.optional-dependencies]
cu128 = [
    # torchcomms wheels are CUDA-specific and depend on the matching torch wheel.
    "torch==2.11.0",
    "torchcomms==0.2.0 ; sys_platform == 'linux'",
]
cu130 = [
    # torchcomms wheels are CUDA-specific and depend on the matching torch wheel.
    "torch==2.11.0",
    "torchcomms==0.2.0 ; sys_platform == 'linux'",
]
dev = [
    "anyio",
    "expecttest",
    "pre-commit",
    "pyupgrade",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
    "pytest-unordered",
    "transformers",
    "ufmt",
]

[tool.setuptools.packages.find]
include = ["torchstore*"]
exclude = ["assets*", "tests*", "docs*"]

# pytorch
[[tool.uv.index]]
name = "pytorch-cu128"
url  = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url  = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchcomms = [
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]

[tool.uv]
index-strategy = "unsafe-best-match"
prerelease = "allow"
conflicts = [
    [
        { extra = "cu128" },
        { extra = "cu130" },
    ],
]
